# img2svg2gcode

./: README.md  __init__.py  cli.py  gmic_stdlib.gmic  img_process.py  main.py  pyproject.toml
docs/: img2svg2gcode.html  index.html  search.js
docs/img2svg2gcode/: cli.html  img_process.html  main.html
