[project]
name = "img2svg2gcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gmic>=3.6.3.post1",
    "gscrib>=1.2.0",
    "guizero>=1.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyautotrace>=0.0.7",
    "scipy>=1.17.1",
    "svgpathtools>=1.7.2",
    "tk>=0.1.0",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
